OTC 国际化只留简体中文

--- a/src/components/Header/Header.html
+++ b/src/components/Header/Header.html
@@ -1181,23 +1181,21 @@
                     <li class="language-itemli">
 
                       <div class="languagediv"  @click="changeLanguage('CH')">
-                        <img src="../../assets/China.png" alt="" class="language-icon">简体中文</div>
-                      <!--                    <div class="languagediv"  @click="changeLanguage('CA')">Русский</div>-->
-                      <div class="languagediv"  @click="changeLanguage('CHT')">
-                        <img src="../../assets/HongKong.png" alt="" class="language-icon">繁体中文</div>
-                      <!-- sss 屏蔽-->
-                      <!--                      <div class="languagediv"  @click="changeLanguage('CA')">-->
-                      <!--                        <img src="../../assets/England.png" alt="" class="language-icon">English</div>-->
-                      <div class="languagediv" @click="changeLanguageLS">
-                        <img src="../../assets/England.png" alt="" class="language-icon">
-                        <!--                        {{$t('indexHeader.forward')}}-->
-                        English
+                        <img src="../../assets/China.png" alt="" class="language-icon">
+                        简体中文
                       </div>
-                      <div class="languagediv" @click="changeLanguageLS">
-                        <img src="../../assets/e_icon.png" alt="" class="language-icon">
-                        <!--                        {$t('indexHeader.forward')}}-->
-                        Русский
-                      </div>
+<!--                      <div class="languagediv"  @click="changeLanguage('CHT')">-->
+<!--                        <img src="../../assets/HongKong.png" alt="" class="language-icon">-->
+<!--                        繁体中文-->
+<!--                      </div>-->
+<!--                      <div class="languagediv" @click="changeLanguageLS">-->
+<!--                        <img src="../../assets/England.png" alt="" class="language-icon">-->
+<!--                        English-->
+<!--                      </div>-->
+<!--                      <div class="languagediv" @click="changeLanguageLS">-->
+<!--                        <img src="../../assets/e_icon.png" alt="" class="language-icon">-->
+<!--                        Русский-->
+<!--                      </div>-->
                       <!--                      <div class="languagediv"  @click="changeLanguage('KOR')">-->
                       <!--                        <img src="../../assets/韩国.png" alt="" class="language-icon in2">한국어</div>-->
                       <!--                      <div class="languagediv"  @click="changeLanguage('JP')">-->
