--- a/src/components/MerchantsProtocol/MerchantsProtocol.css
+++ b/src/components/MerchantsProtocol/MerchantsProtocol.css
@@ -44,7 +44,7 @@
     display: inline-block;
     width: 4px;
     height: 18px;
-    background: #C43E4E;
+    background: #EF5656;
     margin-top: 6px;
     vertical-align: top;
     margin-right: 6px;
@@ -106,7 +106,7 @@
   }
 
   .apply-font-blue{
-    color: #C43E4E;
+    color: #EF5656;
   }
 
 
