--- a/src/components/TransactionBuy/TransactionBuy.html
+++ b/src/components/TransactionBuy/TransactionBuy.html
@@ -239,7 +239,7 @@
                   支付宝
                 </div>
                 <div v-if="buyItem.payMethod === 'BANKCARD' || buyItem.payMethod === 'ALIPAY|BANKCARD' || buyItem.payMethod === 'BANKCARD|ALIPAY'" class="buy-toast-item-first-content-bank-item text_dark strong">
-                  银行转账 <span style="color: #C43E4E">(需本人账户支付)</span>
+                  银行转账 <span style="color: #EF5656">(需本人账户支付)</span>
                 </div>
               </div>
               <!-- <div class="buy-toast-item-pay-mode-info text_blue">(需本人账户支付)</div> -->
@@ -295,13 +295,13 @@
                   支付宝
                 </div>
                 <div v-if="buyItem.payMethod === 'BANKCARD' || buyItem.payMethod === 'ALIPAY|BANKCARD' || buyItem.payMethod === 'BANKCARD|ALIPAY'" class="buy-toast-item-first-content-bank-item text_dark strong">
-                  银行转账 <span style="color: #C43E4E">(需本人账户支付)</span>
+                  银行转账 <span style="color: #EF5656">(需本人账户支付)</span>
                 </div>
                 <div v-if="buyItem.payType === 'ALIPAY' || buyItem.payType === 'ALIPAY|BANKCARD' || buyItem.payType === 'BANKCARD|ALIPAY'" class="buy-toast-item-first-content-bank-item text_dark strong">
                   支付宝
                 </div>
                 <div v-if="buyItem.payType === 'BANKCARD' || buyItem.payType === 'ALIPAY|BANKCARD' || buyItem.payType === 'BANKCARD|ALIPAY'" class="buy-toast-item-first-content-bank-item text_dark strong">
-                  银行转账 <span style="color: #C43E4E">(需本人账户支付)</span>
+                  银行转账 <span style="color: #EF5656">(需本人账户支付)</span>
                 </div>
               </div>
               <!-- <div class="buy-toast-item-pay-mode-info text_blue">(需本人账户支付)</div> -->
