--- a/src/components/OrderConduct/OrderConduct.css
+++ b/src/components/OrderConduct/OrderConduct.css
@@ -66,14 +66,14 @@
   color: #39B496;
 }
 .order_conduct_content > div>.sell{
-  color: #c43e4e;
+  color: #EF5656;
   display: inline;
 }
 .order_conduct_content .buy{
   color: #39B496;
 }
 .order_conduct_content .sell{
-  color: #c43e4e;
+  color: #EF5656;
 }
 .amount{
   width: 20%;
@@ -101,7 +101,7 @@
   top: 6px;
   border: 0;
   padding: 5px 10px;
-  background: #C43E4E;
+  background: #EF5656;
   color: #fff;
   outline: 0;
   cursor: pointer;
@@ -345,7 +345,7 @@
 }
 
 .reds {
-  color: #c43e4e;
+  color: #EF5656;
 }
 /*获取手机验证码的input*/
 .double-input-container > input {
