--- a/src/components/PaymentSet/PaymentSet.css
+++ b/src/components/PaymentSet/PaymentSet.css
@@ -16,7 +16,7 @@
   display: block;
   width: 4px;
   height: 16px;
-  background: #C43E4E;
+  background: #EF5656;
   margin-right: 7px;
 }
 
@@ -63,14 +63,14 @@
 }
 
 .release-txt {
-  color: #C43E4E;
+  color: #EF5656;
   font-size: 14px;
   line-height: 14px;
   cursor: pointer;
 }
 
 .change-txt {
-  color: #C43E4E;
+  color: #EF5656;
   font-size: 14px;
   line-height: 14px;
   cursor: pointer;
