--- a/src/components/PersonBusinessCenter/PersonBusinessCenter.css
+++ b/src/components/PersonBusinessCenter/PersonBusinessCenter.css
@@ -14,7 +14,7 @@
   display: block;
   width: 4px;
   height: 16px;
-  background: #C43E4E;
+  background: #EF5656;
   margin-right: 7px;
   font-family: PingFangSC-Regular;
   font-size: 16px;
@@ -145,7 +145,7 @@
   /* margin-right: 20px;
   font-family: PingFangSC-Regular;
   font-size: 12px;
-  color: #C43E4E;
+  color: #EF5656;
   line-height: 14px; */
 }
 
@@ -155,7 +155,7 @@
   margin-right: 20px;
   font-family: PingFangSC-Regular;
   font-size: 12px;
-  color: #C43E4E;
+  color: #EF5656;
   line-height: 14px;
   width: 68px;
   text-align: end;
@@ -174,7 +174,7 @@
   opacity: 0.7;
   font-family: PingFangSC-Regular;
   font-size: 12px;
-  color: #C43E4E;
+  color: #EF5656;
   line-height: 14px;
 }
 
@@ -184,11 +184,11 @@
 }
 
 .auth-state-item-true {
-  color: #C43E4E;
+  color: #EF5656;
 }
 
 .auth-state-item-false {
-  color: #C43E4E;
+  color: #EF5656;
 }
 
 .auth-state-img {
@@ -228,7 +228,7 @@
 
 .order_title a {
   font-size: 14px;
-  color: #C43E4E;
+  color: #EF5656;
   margin-left: 10px;
 }
 
@@ -261,8 +261,8 @@
   background-color: #fff;
   z-index: 200;
   font-weight: bold;
-  color: #C43E4E;
-  border-bottom: 2px solid #C43E4E;
+  color: #EF5656;
+  border-bottom: 2px solid #EF5656;
 }
 
 .tab-item-first {
