--- a/src/components/TransactionSell/TransactionSell.css
+++ b/src/components/TransactionSell/TransactionSell.css
@@ -24,7 +24,9 @@
   border-bottom: 1px solid rgba(0,0,0,0.08);
 }
 
-
+.nameColor {
+  color: #172A4D;
+}
 .usdtprice2{
   position: relative;
   height: 44px;
@@ -173,7 +175,7 @@
   border-radius: 3px;
 }
 .buywrite01 .inputbuyje:focus .buywrite{
-  border: 1px solid #C43E4E;
+  border: 1px solid #EF5656;
 }
 
 
@@ -317,7 +319,7 @@
 }
 .order{
   width: 11%;
-  color: #C43E4E !important;
+  color: #EF5656 !important;
   font-size: 14px;
 }
 .type{
@@ -396,7 +398,7 @@
   background: #39B496;
 }
 .btn_sell{
-  background: #C43E4E;
+  background: #EF5656;
 }
 
 .btn-can {
