修改商家中心样式

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -345,12 +345,12 @@ input {
 
 /* 深色字体 */
 .text_dark {
-  color: #172A4D !important;
+  color: #6B7DA2 !important;
 }
 
 /* 浅深色字体 */
 .text_light_dark {
-  color: #172A4D !important;
+  color: #6B7DA2 !important;
 }
 
 /* 浅色字体 */
@@ -497,7 +497,7 @@ input {
 
 /* 操作输入框 */
 .input_border {
-  border: 1px solid #C5CFD5 !important;
+  border: 1px solid #E0E1F4 !important;
 }
 
 /* 表单描边 */
