--- a/src/components/BusinessOrderCannel/BusinessOrderCannel.css
+++ b/src/components/BusinessOrderCannel/BusinessOrderCannel.css
@@ -11,10 +11,10 @@
 .business_order_table_title {
   line-height: 40px;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-	opacity: 0.4;
+	/*opacity: 0.4;*/
   font-family: PingFangSC-Regular;
   font-size: 14px;
-  color: #000000;
+  color: #6B7DA2;
   letter-spacing: 0;
 }
 
