--- a/src/components/BusinessOrderComplete/BusinessOrderComplete.css
+++ b/src/components/BusinessOrderComplete/BusinessOrderComplete.css
@@ -12,10 +12,10 @@
 	line-height: 40px;
 	/* border-bottom: 1px solid rgba(0,0,0,0.1); */
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  opacity: 0.4;
+  /*opacity: 0.4;*/
   font-family: PingFangSC-Regular;
   font-size: 14px;
-  color: #000000;
+  color: #6B7DA2;
   letter-spacing: 0;
 }
 .business_order_table_tbody{
