OTC 买入初次弹框 确认弹框修改

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -498,7 +498,7 @@ input {
 
 /* 操作输入框 */
 .input_border {
-  border: 1px solid #C5CFD5 !important;
+  border: 1px solid #E0E1F4 !important;
 }
 
 /* 表单描边 */
