--- a/src/components/TransactionBuy/TransactionBuy.css
+++ b/src/components/TransactionBuy/TransactionBuy.css
@@ -272,11 +272,36 @@
 /*  border-radius: 2px !important;*/
 /*>>>>>>> 4b30c9b37fd9923eaf4a2e531e51b3ceb3ba2a1e*/
 }
+
+.btns {
+  display: inline-block;
+  width: 46.5%;
+  height: 40px;
+  font-size: 14px;
+  line-height: 40px;
+  text-align: center;
+  color: #3576F5;
+  cursor: pointer;
+  background: #fff;
+  border-radius: 2px;
+  border: 1px solid #3576F5;
+}
+.margin-left {
+  margin-right: 4.5%;
+}
 .btn_buy{
   background: #39B496;
 }
 .btn-can {
   padding:7px 10px;
+}
+.otc-color {
+  display: inline-block;
+  float: right;
+  color: #08D0AC;
+  font-size:14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
 }
 .btn_sell{
   background: #EF5656;
@@ -338,7 +363,7 @@ width: 440px;
 }
 
 .buy-toast-window {
-  min-width: 460px;
+  width: 460px;
   min-height: 20px;
   background-color: #ffffff;
   position: absolute;
@@ -347,42 +372,88 @@ width: 440px;
   transform: translateX(-50%) translateY(-50%);
   border-radius: 3px;
   box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.05);
-  padding: 10px 60px 0;
+  /*padding: 10px 60px 0;*/
 }
 
 .buy-toast-box-close {
-  right: 0;
+  width: 15px;
+  right: 25px;
+  top: 22px;
   cursor: pointer;
   position: absolute;
-  top: -31px;
+  /*top: -31px;*/
+}
+.buy-toast-list {
+  padding: 0 5.43%;
 }
 
 .buy-toast-title {
-  text-align: center;
-  height: 48px;
-  line-height: 48px;
-  font-size: 16px;
+  /*text-align: center;*/
+  height: 60px;
+  line-height: 60px;
+  font-size: 18px;
   color: #172A4D;
+  background-color: #EFF0FF;
+  border-radius:1px 1px 0px 0px;
+  padding: 0 5.43%;
 }
 
 .buy-toast-item {
+  /*width: 30%;*/
   height: 32px;
   line-height: 32px;
-  display: flex;
+  /*display: flex;*/
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   font-size: 14px;
 }
-
+.buy-toast-item1 {
+  width: 35%;
+  /*height: 32px;*/
+  /*line-height: 32px;*/
+  /*display: flex;*/
+  /*align-items: center;*/
+  justify-content: space-between;
+  /*font-size: 14px;*/
+}
+.buy-toast-item2 {
+  width: 40%;
+  text-align: right;
+  justify-content: space-between;
+}
+.buy-toast-items {
+  display: inline-block;
+  float: right;
+  color: #0D0E23;
+  font-size:14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
+}
+.buy-toa {
+  height: 77px;
+  /*line-height: 77px;*/
+  padding: 0 15px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  background-color: #F5F6FA;
+  border-radius:1px;
+}
+.tac {
+  width: 25%;
+  text-align: center;
+}
 .buy-toast-item-title{
 
+  height: 42px;
+  padding-top: 15px;
+  /*line-height: 46px;*/
+  /*width: 30%;*/
 }
 .buy-toast-item-title-i{
 
 }
 
-.buy-toast-item-first-content {
-
+.buy-toast-item1 {
 }
 .buy-toast-item-first-content-i{
   /* padding-top:30px; */
@@ -390,14 +461,37 @@ width: 440px;
 }
 
 .buy-toast-item-input-box {
+  display: inline-block;
+  width: 42.5%;
   flex-grow: 2;
-  height: 100%;
+  height: 40px;
   box-sizing: border-box;
   padding-left: 10px;
-  padding-right: 50px;
+  /*padding-right: 50px;*/
   position: relative;
 }
 
+.buy-toast-item-input-boxOtc {
+  display: inline-block;
+  flex-grow: 2;
+  box-sizing: border-box;
+  padding: 0 4.5%;
+  position: relative;
+}
+.buy-toastImg {
+  width: 15px;
+  vertical-align: unset;
+}
+.mbt {
+  /*margin-bottom: 10px;*/
+  height: 40px;
+}
+.header-fs {
+  height: 50px;
+  line-height: 50px;
+  margin-top: 10px;
+  /*border-bottom: 1px solid #F5F6FA;*/
+}
 .buy-toast-item-input {
   width: 100%;
   height: 100%;
@@ -424,13 +518,51 @@ width: 440px;
 
 .buy-toast-item-special {
   align-items: flex-start;
-  height: auto;
+  /*height: auto;*/
+  height: 50px;
+  line-height: 50px;
+  border-top:1px solid #F5F6FA;
+}
+.buy-toast-btn-boxsb {
+  height: 40px;
+  padding: 0 5.43%;
+  margin: 15px 0;
 }
 
+.buy-toast-item-specials {
+  padding: 0 5.43%;
+  align-items: flex-start;
+  /*height: auto;*/
+  height: 50px;
+  line-height: 50px;
+  border-top:1px solid #F5F6FA;
+}
+.otc-bor-top {
+  border: 0px;
+}
+.buy-toast-item-specialsOtc {
+  padding: 0 5.43%;
+  align-items: flex-start;
+  /*height: auto;*/
+  height: 50px;
+  line-height: 50px;
+  /*margin-top: 10px;*/
+  border-bottom:1px solid #F5F6FA;
+}
+.backC {
+  background-color: #3576F5;
+  color: #FFFFFF;
+}
 .buy-toast-item-pay-mode-line {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  display: inline-block;
+  float: right;
+  color: #0D0E23;
+  font-size:14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
 }
 
 .buy-toast-item-pay-mode-info {
@@ -448,7 +580,22 @@ width: 440px;
 .buy-toast-item-unit {
   margin-left: 10px;
 }
+.text_grey_8 {
+  font-size: 12px;
+  color: #6B7DA2;
+}
 
+.text_grey_10 {
+  font-size: 14px;
+  color: #3576F5;
+  font-family:PingFangSC-Medium,PingFang SC;
+  font-weight:500;
+}
+
+.text_grey_9 {
+  font-size: 14px;
+  color: #6B7DA2;
+}
 /* 二级验证 */
 
 .ga_sms_container{}
@@ -701,7 +848,7 @@ width: 440px;
     border-radius: 6px;
     -webkit-box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.05);
     box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.05);
-    padding: 10px 30px 0;
+    /*padding: 10px 30px 0;*/
   }
   .buy-toast-item-pay-mode-info{
     line-height: 32px;
