修改商家中心样式

--- a/src/components/BusinessCenter/BusinessCenter.html
+++ b/src/components/BusinessCenter/BusinessCenter.html
@@ -32,35 +32,35 @@
 <!--      </div>-->
       <div class="business-header-list business-header-list-buy flex-colum flex-between">
         <div class="business-header-item flex-center flex-between">
-          <div class="business-header-item-title text_light_dark">价格：</div>
+          <div class="business-header-item-title text_light_dark">价格 </div>
           <div class="business-header-item-input buy input_border">
             <input class="business-input" v-model="buyInputPrice" @input="changeBuyInputPrice" type="text" @focus="FOCUS($event)" @blur="blurBuyInputPrice($event)">
             <div class="business-redon">CNY</div>
           </div>
         </div>
         <div class="business-header-item flex-center flex-between">
-          <div class="business-header-item-title text_light_dark">数量：</div>
+          <div class="business-header-item-title text_light_dark">数量 </div>
           <div class="business-header-item-input buy input_border">
             <input class="business-input" v-model="buyInputNum" @input="changeBuyInputPrice" type="text" @focus="FOCUS($event)" @blur="blurBuyInputNum($event)">
             <div class="business-redon">USDT</div>
           </div>
         </div>
         <div class="business-header-item flex-center flex-between">
-          <div class="business-header-item-title text_light_dark">金额：</div>
+          <div class="business-header-item-title text_light_dark">金额 </div>
           <div class="business-header-item-input buy input_border">
             <input class="business-input" v-model="buyInputMoney" type="text" @input="changeBuyInputNum" @focus="FOCUS($event)" @blur="blurBuyInputMoney($event)">
             <div class="business-redon">CNY</div>
           </div>
         </div>
         <div class="business-header-item flex-center flex-between">
-          <div class="business-header-item-title text_light_dark">单笔最小购买数量：</div>
+          <div class="business-header-item-title text_light_dark">单笔最小购买数量 </div>
           <div class="business-header-item-input buy input_border">
             <input class="business-input" type="text" v-model="buyInputMinNum" @input="changeBuyInputMinNum" @focus="FOCUS($event)" @blur="blurBuyInputMinNum($event)">
             <div class="business-redon">USDT</div>
           </div>
         </div>
         <div class="business-header-item flex-center flex-between">
-          <div class="business-header-item-title text_light_dark">单笔最大购买数量：</div>
+          <div class="business-header-item-title text_light_dark">单笔最大购买数量 </div>
           <div class="business-header-item-input buy input_border">
             <input class="business-input" type="text" v-model="buyInputMaxNum" @input="changeBuyInputMaxNum" @focus="FOCUS($event)" @blur="blurBuyInputMaxNum($event)">
             <div class="business-redon">USDT</div>
@@ -69,7 +69,7 @@
 
       </div>
       <div class="business-header-item pay_type margin_top flex-center flex-between">
-        <div class="business-header-item-title text_light_dark">支付方式：</div>
+        <div class="business-header-item-title text_light_dark">支付方式</div>
         <div class="business-header-item-input pay_type">
           <div class="business-header-item-checkbox-box">
             <!--支付宝-->
@@ -124,35 +124,35 @@
 
       <div class="business-header-list flex-colum flex-between">
         <div class="business-header-item flex-center flex-between">
-          <div class="business-header-item-title text_light_dark">价格：</div>
+          <div class="business-header-item-title text_light_dark">价格 </div>
           <div class="business-header-item-input input_border">
             <input class="business-input" type="text" v-model="sellInputPrice" @input="changeSellInputPrice" @focus="FOCUS($event)" @blur="blurSellInputPrice($event)">
             <div class="business-redon">CNY</div>
           </div>
         </div>
         <div class="business-header-item flex-center flex-between">
-          <div class="business-header-item-title text_light_dark">数量：</div>
+          <div class="business-header-item-title text_light_dark">数量 </div>
           <div class="business-header-item-input input_border">
             <input class="business-input" type="text" v-model="sellInputNum" @input="changeSellInputPrice" @focus="FOCUS($event)" @blur="blurSellInputNum($event)">
             <div class="business-redon">USDT</div>
           </div>
         </div>
         <div class="business-header-item flex-center flex-between">
-          <div class="business-header-item-title text_light_dark">金额：</div>
+          <div class="business-header-item-title text_light_dark">金额 </div>
           <div class="business-header-item-input input_border">
             <input class="business-input" type="text" v-model="sellInputMoney" @input="changeSellInputNum" @focus="FOCUS($event)" @blur="blurSellInputMoney($event)">
             <div class="business-redon">CNY</div>
           </div>
         </div>
         <div class="business-header-item flex-center flex-between">
-          <div class="business-header-item-title text_light_dark">单笔最小卖出数量：</div>
+          <div class="business-header-item-title text_light_dark">单笔最小卖出数量 </div>
           <div class="business-header-item-input input_border">
             <input class="business-input" type="text" v-model="sellInputMinNum" @input="changeSellInputMinNum" @focus="FOCUS($event)" @blur="blurSellInputMinNum($event)">
             <div class="business-redon">USDT</div>
           </div>
         </div>
         <div class="business-header-item flex-center flex-between">
-          <div class="business-header-item-title text_light_dark">单笔最大卖出数量：</div>
+          <div class="business-header-item-title text_light_dark">单笔最大卖出数量 </div>
           <div class="business-header-item-input input_border">
             <input class="business-input" type="text" v-model="sellInputMaxNum" @input="changeSellInputMaxNum"  @focus="FOCUS($event)" @blur="blurSellInputMaxNum($event)">
             <div class="business-redon">USDT</div>
@@ -161,7 +161,7 @@
       </div>
 
       <div class="business-header-item pay_type margin_top flex-center flex-between">
-        <div class="business-header-item-title text_light_dark">支付方式：</div>
+        <div class="business-header-item-title text_light_dark">支付方式 </div>
         <div class="business-header-item-input pay_type">
           <div class="business-header-item-checkbox-box">
             <!--支付宝-->
