--- a/src/components/TransactionBuy/TransactionBuy.css
+++ b/src/components/TransactionBuy/TransactionBuy.css
@@ -117,7 +117,26 @@
   outline:none;
   /*background: url('../../assets/c2c_form_icon/bolt.png') no-repeat;*/
 }
-
+.usdtprice .buutton:hover{
+  width: 160px;
+  height:44px;
+  float: right;
+  position: absolute;
+  background: #36CBB0;
+  border-radius: 3px;
+  right: 0;
+  margin-top: 32px;
+  font-family: PingFangSC-Medium;
+  font-size: 16px;
+  color: #FFFFFF;
+  text-align: center;
+  line-height:44px;
+  cursor: pointer;
+  border:0;
+  top:-32px;
+  outline:none;
+  /*background: url('../../assets/c2c_form_icon/bolt.png') no-repeat;*/
+}
 .usdtprice .buutton .imgs{
   width: 10px;
   height: 14px;
@@ -143,6 +162,7 @@
 .buywrite01 .inputbuyje{
   width: 240px;
   height: 42px;
+  font-size: 14px;
   /*background: #F7F7FB;*/
   border:none;
   float: left;
@@ -150,8 +170,8 @@
 }
 .buywrite01 .inputbuyje::-webkit-input-placeholder{
   font-family: PingFangSC-Regular;
-  font-size: 16px;
-  color: #6B7DA2;
+  font-size: 14px;
+  color: #A2B5D9;
   line-height: 16px;
 }
 .buywrite02{
@@ -162,8 +182,8 @@
   text-align: center;
   /*background: #F7F7FB;*/
   font-family: ArialMT;
-  font-size: 16px;
-  color: #7D8790;
+  font-size: 14px;
+  color: #A2B5D9;
 }
 .buywrite{
   position: absolute;
@@ -190,7 +210,7 @@
   width: 11%;
 }
 .order{
-  width: 12%;
+  width: 11%;
   color: #172A4D;
   font-size: 14px;
 }
@@ -201,34 +221,32 @@
 }
 .price{
   width: 11%;
-  font-size: 14px;
 }
 .amount{
   width: 14%;
-  font-size: 14px;
 }
 .money{
   width: 13%;
-  font-size: 14px;
+
 }
 .num{
   width: 16%;
-  font-size: 14px;
+
 }
 .pay_type{
   width: 10%;
   line-height: 100%;
-  font-size: 14px;
+
 }
 
 .unit {
   width: 11%;
-  font-size: 14px;
+
 }
 .option{
   width: 9%;
   text-align: right;
-  font-size: 14px;
+
 }
 
 .payment_icon{
@@ -276,24 +294,40 @@
 .btns {
   display: inline-block;
   width: 46.5%;
-  height: 40px;
+  height: 38px;
   font-size: 14px;
   line-height: 40px;
   text-align: center;
   color: #3576F5;
   cursor: pointer;
-  background: #fff;
   border-radius: 2px;
-  border: 1px solid #3576F5;
 }
-.margin-left {
+.btnOtc {
+  border: 1px solid #3576F5;
+  background: #FFFFFF;
+}
+.btnOtc:hover {
+  /*border: 1px solid #3576F5;*/
+  color: #FFFFFF;
+  background: #3576F5;
+}
+.margin-leftO {
   margin-right: 4.5%;
 }
 .btn_buy{
   background: #39B496;
 }
+.btn_buy:hover {
+  background: #36CBB0;
+}
 .btn-can {
   padding:7px 10px;
+}
+.PopupImg {
+  width: 16px;
+  margin-right: 10px;
+  vertical-align: sub;
+  margin-bottom: 1px;
 }
 .otc-color {
   display: inline-block;
@@ -434,9 +468,39 @@ width: 440px;
   /*line-height: 77px;*/
   padding: 0 15px;
   margin-top: 20px;
-  margin-bottom: 10px;
+  /*margin-bottom: 10px;*/
   background-color: #F5F6FA;
   border-radius:1px;
+}
+.text_green {
+   color: #39B496;
+   font-size:16px;
+   font-family:PingFangSC-Medium,PingFang SC;
+   font-weight:500;
+ }
+.text_green14 {
+  color: #39B496;
+  font-size:14px;
+  font-family:PingFangSC-Medium,PingFang SC;
+  font-weight:500;
+}
+.text_dark {
+  color: #172A4D;
+  font-size:16px;
+  font-family:PingFangSC-Medium,PingFang SC;
+  font-weight:500;
+}
+.text_dark14 {
+  color: #172A4D;
+  font-size:14px;
+  font-family:PingFangSC-Medium,PingFang SC;
+  font-weight:500;
+}
+.buy-mar-bom {
+  margin-bottom: 25px;
+}
+.buy-mar-bom10 {
+  margin-bottom: 10px;
 }
 .tac {
   width: 25%;
@@ -497,7 +561,11 @@ width: 440px;
   height: 100%;
   border: none;
   /*padding-left: 10px;*/
+  color: #0D0E23;
   display: block;
+  font-size:14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:500;
 }
 
 .buy-toast-item-input-currency {
@@ -550,8 +618,13 @@ width: 440px;
   border-bottom:1px solid #F5F6FA;
 }
 .backC {
+  border: 1px solid #5C93FF;
   background-color: #3576F5;
   color: #FFFFFF;
+}
+.backC:hover {
+  background-color: #5C93FF;
+  border: 1px solid #5C93FF;
 }
 .buy-toast-item-pay-mode-line {
   display: flex;
@@ -583,6 +656,13 @@ width: 440px;
 .text_grey_8 {
   font-size: 12px;
   color: #6B7DA2;
+}
+
+.text_grey_12 {
+  font-size: 14px;
+  color: #6B7DA2;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
 }
 
 .text_grey_10 {
@@ -850,6 +930,8 @@ width: 440px;
     box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.05);
     /*padding: 10px 30px 0;*/
   }
+
+
   .buy-toast-item-pay-mode-info{
     line-height: 32px;
   }
@@ -921,3 +1003,15 @@ width: 440px;
   margin-right: 16px;
 }
 
+input::-webkit-input-placeholder{
+  color:#A2B5D9;
+}
+input::-moz-placeholder{   /* Mozilla Firefox 19+ */
+  color:#A2B5D9;
+}
+input:-moz-placeholder{    /* Mozilla Firefox 4 to 18 */
+  color:#A2B5D9;
+}
+input:-ms-input-placeholder{  /* Internet Explorer 10-11 */
+  color:#A2B5D9;
+}
