--- a/src/components/TransactionSell/TransactionSell.css
+++ b/src/components/TransactionSell/TransactionSell.css
@@ -9,8 +9,9 @@
   line-height: 70px;
   border-bottom: 1px solid rgba(0,0,0,0.08);
   /*opacity: 0.4;*/
-  font-family: PingFangSC-Regular;
   font-size: 14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
   color: #6B7DA2;
   letter-spacing: 0
 }
@@ -26,6 +27,7 @@
 
 .nameColor {
   color: #172A4D;
+  font-family:PingFangSC-Regular,PingFang SC;
 }
 .usdtprice2{
   position: relative;
@@ -39,15 +41,15 @@
 }
 
 .shichanggd{
-  font-family: PingFangSC-Semibold;
   font-size: 20px;
+  font-family:PingFangSC-Regular,PingFang SC;
   color: #172A4D;
   letter-spacing: 0;
   height: 50px;
 }
 
 .usdtpriceaaa1{
-  font-family: PingFangSC-Regular;
+  font-family:PingFangSC-Regular,PingFang SC;
   font-size: 20px;
   color: #172A4D;
   letter-spacing: 0;
@@ -62,7 +64,7 @@
 /*  margin-left: 10px;*/
 /*}*/
 .usdtpriceaaa3{
-  font-family: PingFangSC-Regular;
+  font-family:PingFangSC-Regular,PingFang SC;
   font-size: 14px;
   color: #6B7DA2;
   letter-spacing: 0;
@@ -111,7 +113,7 @@
   border-radius: 3px;
   right: 0;
   margin-top: 32px;
-  font-family: PingFangSC-Medium;
+  font-family:PingFangSC-Regular,PingFang SC;
   font-size: 16px;
   color: #FFFFFF;
   text-align: center;
@@ -122,15 +124,46 @@
   outline:none;
   /*background: url('../../assets/c2c_form_icon/bolt.png') no-repeat;*/
 }
-
+.usdtprice .buutton:hover{
+  width: 160px;
+  height:42px;
+  float: right;
+  position: absolute;
+  background: #FD7070;
+  border-radius: 3px;
+  right: 0;
+  margin-top: 32px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-size: 16px;
+  color: #FFFFFF;
+  text-align: center;
+  line-height:42px;
+  cursor: pointer;
+  border:0;
+  top:-32px;
+  outline:none;
+  /*background: url('../../assets/c2c_form_icon/bolt.png') no-repeat;*/
+}
 .usdtprice .buutton .imgs{
   width: 10px;
   height: 14px;
   margin-bottom: -2px;
 }
+.text_green14 {
+  color: #39B496;
+  font-size:14px;
+  font-family:PingFangSC-Medium,PingFang SC;
+  font-weight:500;
+}
+.text_dark14 {
+  color: #172A4D;
+  font-size:14px;
+  font-family:PingFangSC-Medium,PingFang SC;
+  font-weight:500;
+}
 
 .usdtprice .buytt{
-  font-family: PingFangSC-Regular;
+  font-family:PingFangSC-Regular,PingFang SC;
   font-size: 14px;
   color: #6B7DA2;
   letter-spacing: 0;
@@ -152,9 +185,9 @@
   padding-left: 20px;
 }
 .buywrite01 .inputbuyje::-webkit-input-placeholder{
-  font-family: PingFangSC-Regular;
-  font-size: 16px;
-  color: #6B7DA2;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-size: 14px;
+  color: #A2B5D9;
   line-height: 16px;
 }
 .buywrite02{
@@ -164,9 +197,9 @@
   line-height: 42px;
   text-align: center;
   /*background: #F7F7FB;*/
-  font-family: ArialMT;
-  font-size: 16px;
-  color: #7D8790;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-size: 14px;
+  color: #A2B5D9;
 }
 .buywrite{
   position: absolute;
@@ -189,7 +222,7 @@
 /*}*/
 
 .shichanggd{
-  font-family: PingFangSC-Semibold;
+  font-family:PingFangSC-Regular,PingFang SC;
   font-size: 20px;
   color: #172A4D;
   letter-spacing: 0;
@@ -316,36 +349,37 @@
 .ordertitle{
   width: 11%;
   font-size: 14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+
 }
 .order{
   width: 11%;
-  color: #EF5656 !important;
-  font-size: 14px;
+
 }
 .type{
   width: 10%;
-  font-size: 14px;
+
 }
 .price{
   width: 11%;
-  font-size: 14px;
+
 }
 .amount{
   width: 14%;
-  font-size: 14px;
+
 }
 .money{
   width: 13%;
-  font-size: 14px;
+
 }
 .num{
   width: 16%;
-  font-size: 14px;
+
 }
 .pay_type{
   width: 10%;
   line-height: 100%;
-  font-size: 14px;
+
 }
 
 .payment_icon{
@@ -360,11 +394,15 @@
 .unit {
   width: 11%;
   font-size: 14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+
 }
 .option{
   width: 9%;
   text-align: right;
   font-size: 14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+
 }
 
 .business_order_table_tr{
@@ -394,11 +432,12 @@
   border-radius: 2px;
   border: 1px solid #E7EBEE;
 }
-.btn_sell{
-  background: #39B496;
-}
+
 .btn_sell{
   background: #EF5656;
+}
+.btn_sell:hover {
+  background: #FD7070;
 }
 
 .btn-can {
@@ -415,6 +454,8 @@
   padding-top: 20px;
   line-height: 26px;
   font-size: 14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+
   /* width: 520px; */
 }
 
@@ -441,6 +482,8 @@
   line-height: 28px;
   margin: 30px 0 30px 0;
   font-size: 14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+
 }
 
 .btn-cancel {
@@ -488,6 +531,8 @@
   height: 48px;
   line-height: 48px;
   font-size: 16px;
+  font-family:PingFangSC-Regular,PingFang SC;
+
 }
 .sell-toast-item {
   height: 32px;
@@ -496,6 +541,8 @@
   align-items: center;
   justify-content: flex-start;
   font-size: 14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+
 }
 
 .sell-toast-item-title{
@@ -797,6 +844,295 @@
   color: #d4d4d4;
 
 }
+
+/*弹框样式修改*/
+
+
+.buy-toast-window {
+  width: 460px;
+  min-height: 20px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  border-radius: 3px;
+  box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.05);
+  /*padding: 10px 60px 0;*/
+}
+
+.buy-toast-title {
+  /*text-align: center;*/
+  height: 60px;
+  line-height: 60px;
+  font-size: 18px;
+  color: #172A4D;
+  background-color: #EFF0FF;
+  border-radius:1px 1px 0px 0px;
+  padding: 0 5.43%;
+}
+
+.buy-toast-box-close {
+  width: 15px;
+  right: 25px;
+  top: 22px;
+  cursor: pointer;
+  position: absolute;
+  /*top: -31px;*/
+}
+
+.buy-toast-list {
+  padding: 0 5.43%;
+}
+.buy-toa {
+  height: 77px;
+  /*line-height: 77px;*/
+  padding: 0 15px;
+  margin-top: 20px;
+  background-color: #F5F6FA;
+  border-radius:1px;
+}
+
+.buy-mar-bom {
+  margin-bottom: 25px;
+}
+.buy-mar-bom10 {
+  margin-bottom: 10px;
+}
+
+.buy-toast-item1 {
+  width: 35%;
+  /*height: 32px;*/
+  /*line-height: 32px;*/
+  /*display: flex;*/
+  /*align-items: center;*/
+  justify-content: space-between;
+  /*font-size: 14px;*/
+}
+
+.buy-toast-item-title{
+
+  height: 42px;
+  padding-top: 15px;
+  /*line-height: 46px;*/
+  /*width: 30%;*/
+}
+
+.text_grey_8 {
+  font-size: 12px;
+  color: #6B7DA2;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
+}
+.text_grey_12 {
+  font-size: 14px;
+  color: #6B7DA2;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
+}
+
+.tac {
+  width: 25%;
+  text-align: center;
+}
+.buy-toast-item2 {
+  width: 40%;
+  text-align: right;
+  justify-content: space-between;
+}
+.mbt {
+  /*margin-bottom: 10px;*/
+  height: 40px;
+  line-height: 40px;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+}
+
+.buy-toast-item-input-box {
+  display: inline-block;
+  width: 42.5%;
+  flex-grow: 2;
+  height: 40px;
+  box-sizing: border-box;
+  padding-left: 10px;
+  /*padding-right: 50px;*/
+  position: relative;
+}
+.buy-toast-item-input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  /*padding-left: 10px;*/
+  color: #0D0E23;
+  display: block;
+  font-size:14px;
+  font-family:PingFangSC-Medium,PingFang SC;
+  font-weight:500;
+}
+.buy-toast-item-input-currency {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+
+}
+.text_grey_10 {
+  font-size: 14px;
+  color: #3576F5;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:500;
+}
+.text_grey_9 {
+  font-size: 14px;
+  color: #6B7DA2;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
+}
+.PopupImg {
+  width: 16px;
+  margin-right: 10px;
+  vertical-align: sub;
+}
+.buy-toast-item-input-boxOtc {
+  display: inline-block;
+  flex-grow: 2;
+  box-sizing: border-box;
+  padding: 0 4.5%;
+  position: relative;
+}
+.buy-toastImg {
+  width: 15px;
+  vertical-align: unset;
+}
+.text_dark {
+  color: #172A4D;
+  font-size:16px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:500;
+}
+.text_red {
+  color: #EF5656;
+  font-size:16px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:500;
+}
+.header-fs {
+  height: 50px;
+  line-height: 50px;
+  margin-top: 10px;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  /*border-bottom: 1px solid #F5F6FA;*/
+}
+.buy-toast-items {
+  display: inline-block;
+  float: right;
+  color: #0D0E23;
+  font-size:14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
+}
+.buy-toast-item {
+  /*width: 30%;*/
+  height: 32px;
+  line-height: 32px;
+  /*display: flex;*/
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
+}
+
+.buy-toast-item-specials {
+  padding: 0 5.43%;
+  align-items: flex-start;
+  /*height: auto;*/
+  height: 50px;
+  line-height: 50px;
+  border-top:1px solid #F5F6FA;
+}
+.buy-toast-item-pay-mode-line {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  display: inline-block;
+  float: right;
+  color: #0D0E23;
+  font-size:14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
+}
+.buy-toast-btn-boxsb {
+  height: 40px;
+  padding: 0 5.43%;
+  margin: 15px 0;
+}
+.btns {
+  display: inline-block;
+  width: 46.5%;
+  height: 40px;
+  font-size: 14px;
+  line-height: 40px;
+  text-align: center;
+  color: #3576F5;
+  cursor: pointer;
+  /*background: #fff;*/
+  border-radius: 2px;
+  /*border: 1px solid #3576F5;*/
+}
+
+.margin-leftO {
+  margin-right: 4.5%;
+}
+.backC {
+  background-color: #3576F5;
+  color: #FFFFFF;
+}
+.backC:hover {
+  background-color: #5C93FF;
+  border: 1px solid #5C93FF;
+}
+.btnOtc {
+  border: 1px solid #3576F5;
+  background: #FFFFFF;
+}
+.btnOtc:hover {
+  /*border: 1px solid #3576F5;*/
+  color: #FFFFFF;
+  background: #3576F5;
+}
+.otc-bor-top {
+  border: 0px;
+}
+.otc-color {
+  display: inline-block;
+  float: right;
+  color: #EF5656;
+  font-size:14px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
+}
+.buy-toast-item-specialsOtc {
+  padding: 0 5.43%;
+  align-items: flex-start;
+  /*height: auto;*/
+  height: 50px;
+  line-height: 50px;
+  /*margin-top: 10px;*/
+  border-bottom:1px solid #F5F6FA;
+}
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 768px) {
   .pop-header {
     width: auto;
@@ -895,3 +1231,15 @@
   margin-right: 16px;
 }
 
+input::-webkit-input-placeholder{
+  color:#A2B5D9;
+}
+input::-moz-placeholder{   /* Mozilla Firefox 19+ */
+  color:#A2B5D9;
+}
+input:-moz-placeholder{    /* Mozilla Firefox 4 to 18 */
+  color:#A2B5D9;
+}
+input:-ms-input-placeholder{  /* Internet Explorer 10-11 */
+  color:#A2B5D9;
+}
